# hello-world

./: .travis.yml  Dockerfile  Jenkinsfile  Makefile  setup.cfg  travis.yml
tests/: test_hello_world.py
